<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ipro239.iitbeaconproject.UserModeFragment"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <RadioGroup
            android:id="@+id/ui_usermode_grp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp">

            <RadioButton
                android:id="@+id/ui_student_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/option_student"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/ui_faculty_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/option_faculty"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/ui_guest_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/option_guest"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/ui_customuser_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/option_custom"
                android:textSize="18sp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/user_mode_apply"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/apply"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:padding="15dp"
            android:text="@string/option_custom_settings"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/custom_settings_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/filter_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:padding="15dp"
                android:text="@string/filter1"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/filter_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:padding="15dp"
                android:text="@string/filter2"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/filter_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:padding="15dp"
                android:text="@string/filter3"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/filter_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:padding="15dp"
                android:text="@string/filter4"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/filter_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:padding="15dp"
                android:text="@string/filter5"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>
